--- a/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -41,6 +41,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarConsole.cs" />
     <Compile Include="GarageConsole.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
