--- a/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
+++ b/Ex03.ConsoleUI/Ex03.ConsoleUI.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="CarConsole.cs" />
     <Compile Include="GarageConsole.cs" />
+    <Compile Include="MotorcycleConsole.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="TruckConsole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
